0.94
Changes:
- fixed so that IOPorts output 1 on pins that are configured as input 
  (with DIR)
- fixed notification of operating modes on the CC2420 for duty cycle calculation, etc.
- 

0.93
Changes:
- removed tick based component support from MSP430 core
- re-implemented USART to be event based instead of tick based
- fixed bug in ADC12 subsystem that caused lots of events to be
  scheduled back in time (causing other subsystems to get
  delays on their events...)
- fixed RadioWrapper for backward compatibility with PacketListener
  (for the CC2420). 
- fixed ADC12 to turn off event scheduling when ADC12 is not on anymore
- fixed xmem read/write for cli and added Memory API for flash memory.

0.92
Changes:
- fixed bug with a write register which did not handle word/byte
- fixed bug which caused array out of bounds on IO-units.
- fixed bug in timer causing interrupts when timer was stopped
- fixed bug in timer to handle start/stop better
- fixed bug in MSP430 core that caused MOV instruction to change status flags
- added getDoubleValue in DataSource and made "duty" command print
  duty cycle information as double instead of int
- fixed windows to accept double input and not only int input
- corrected cycle count on some instructions
- improved CC2420 emulation (thanks to Matt Thompson)
- added Telos platform including AT45DB flash memory chip (Matt Thompson)


0.91
Changes:
- added window system and support for it in the CLI
- added two chart types for the windows subsystem
- added redirect to windows in the CLI
- added memory dump for both std out and Windows
- improved CC2420 emulation
- added CLI commands
- reimplemented reset of the CPU
- improved support for Digital IO Ports
- added working ADC12 subsystem
- added watchdog WDT subsystem
- added support for file based scripts to the CLI
- added configuration system
- added connectivity between multiple running mspsim's
- bugfix in instruction emulation thanks to Matt Thompson