@@ -3,7 +3,9 @@ Changes:
 - fixed so that IOPorts output 1 on pins that are configured as input 
   (with DIR)
 - fixed notification of operating modes on the CC2420 for duty cycle calculation, etc.
-- 
+- fixed status register update bug (byte/word problem)
+- improved CC2420 implementation (including RSSI_VALID flag)
+- added SHT11 implementation for Tmote Sky
 
 0.93
 Changes:
